footer like elementor.com footer is being built

--- a/style/main.css
+++ b/style/main.css
@@ -832,24 +832,33 @@ body {
 :root {
   --main-radius: 5px;
 }
-.footer__container {
+::-webkit-input-placeholder {
+  color: #ffffff;
+}
+footer {
   background-color: #92003B;
+}
+footer .footer__container {
+  max-width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
+  position: relative;
+  padding: 108px 48px 96px;
   color: white;
   display: grid;
   height: 100%;
-  grid-template-columns: 1fr 1fr 1fr 1fr 2fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 310px;
+  grid-template-rows: 1fr 1fr 0.1fr 0.1fr;
   grid-gap: 0.2rem;
-  grid-template-areas: "column__footer-one column__footer-two column__footer-three column__footer-four paragraph__footer" "column__footer-one column__footer-two column__footer-three column__footer-four subscribe__footer" "column__footer-one column__footer-two column__footer-three column__footer-four follow__footer" "column__footer-one column__footer-two column__footer-three column__footer-four copyright__footer";
+  grid-template-areas: "column__footer-one column__footer-four column__footer-three column__footer-two paragraph__footer" "column__footer-one column__footer-four column__footer-three column__footer-two subscribe__footer" "column__footer-one column__footer-five column__footer-three column__footer-two follow__footer" "column__footer-one column__footer-five column__footer-three column__footer-two copyright__footer";
 }
-.footer__container a {
+footer .footer__container a {
   color: white;
   font-size: 14px;
   font-weight: 400;
-  line-height: 2.7em;
   letter-spacing: -0.28px;
 }
-.footer__container h4 {
+footer .footer__container h4 {
   color: #FF7BE5;
   font-size: 20px;
   font-weight: 600;
@@ -857,53 +866,78 @@ body {
   line-height: 1.6em;
   font-family: 'Roboto';
 }
-.footer__container p {
+footer .footer__container p {
   font-size: 14px;
   line-height: 1.6em;
   font-family: 'Roboto';
 }
-.footer__container .column {
+footer .footer__container .column {
   display: flex;
   flex-direction: column;
 }
-.footer__container .column__footer-one {
-  text-align: center;
+footer .footer__container .column__footer-one {
   grid-area: column__footer-one;
 }
-.footer__container .column__footer-two {
-  text-align: center;
+footer .footer__container .column__footer-two {
   grid-area: column__footer-two;
   grid-auto-rows: 40px;
 }
-.footer__container .column__footer-three {
-  text-align: center;
+footer .footer__container .column__footer-three {
   grid-area: column__footer-three;
   grid-auto-rows: 40px;
 }
-.footer__container .column__footer-four {
-  text-align: center;
+footer .footer__container .column__footer-four {
   grid-area: column__footer-four;
 }
-.footer__container .paragraph__footer {
-  text-align: center;
+footer .footer__container .column__footer-five {
+  grid-area: column__footer-five;
+}
+footer .footer__container .paragraph__footer {
   grid-area: paragraph__footer;
 }
-.footer__container .subscribe__footer {
+footer .footer__container .subscribe__footer {
   justify-content: center;
   grid-area: subscribe__footer;
 }
-.footer__container .subscribe__footer .subscribe__footer-heading {
-  text-align: center;
-}
-.footer__container .subscribe__footer .subscribe__footer-input {
+footer .footer__container .subscribe__footer .subscribe__footer-input {
   display: flex;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #fff;
 }
-.footer__container .follow__footer {
-  text-align: center;
+footer .footer__container .subscribe__footer .subscribe__footer-input input {
+  width: 180%;
+  border-width: 0px;
+  border: none;
+  background-color: #92003B;
+}
+footer .footer__container .subscribe__footer .subscribe__footer-input .subscribe__footer__button {
+  width: 100%;
+}
+footer .footer__container .subscribe__footer .subscribe__footer-input .subscribe__footer__button .subscribe__footer-button {
+  font-size: 13px;
+  line-height: 42px;
+  border-style: solid;
+  border-width: 0;
+  border-radius: 0 0 0 0;
+  padding: 0;
+  background-color: #FF7BE5;
+  width: 100%;
+  color: #92003B;
+}
+footer .footer__container .follow__footer {
   grid-area: follow__footer;
 }
-.footer__container .copyright__footer {
-  text-align: center;
+footer .footer__container .follow__footer .follow__footer-icons {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+footer .footer__container .follow__footer .follow__footer-icons a img {
+  height: 2rem;
+  font-size: 3.75em;
+}
+footer .footer__container .copyright__footer {
   grid-area: copyright__footer;
 }
 .svganimate__container {
