--- a/style/main.less
+++ b/style/main.less
@@ -290,7 +290,12 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 /////////////////////////////////
 //////////////////////////////////////////////////////////
     
+@media only screen and (max-width: 314px){
+    .header__container{
+        flex-direction: column;
+    } 
     
+}
 
     .header{
         transition: 0.3s all;
