--- a/style/main.less
+++ b/style/main.less
@@ -21,6 +21,7 @@
 html, body {
     /* Убирает прокрутку по горизонтале, для мобильной версии */
     overflow-x: hidden;
+    background-color: @9;
 }
 
 
@@ -37,6 +38,11 @@ html, body {
 @6: #251B37;
 @7: #EDE4E0;
 @8: #5F9DF7;
+@9: #F08A5D;
+@10:#F9ED69;
+@10:#F38181;
+@11:#FCE38A;
+
 html{
     box-sizing: border-box;
 }
@@ -709,8 +715,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 }
 
 .loading-lazy__section{
-    margin-top: 30px;
-    margin-bottom: 30px;
+    
     .loading-lazy__container{
         width: 1800px;
         margin: 0 auto;
