--- a/style/main.less
+++ b/style/main.less
@@ -21,6 +21,7 @@
 html, body {
     /* Убирает прокрутку по горизонтале, для мобильной версии */
     overflow-x: hidden;
+    
     background-color: @9;
 }
 
@@ -405,7 +406,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 //////////////////////////////////////3d slider with swiper slider///////////////////////////////////////////////////////
 .header__img{
     width: 100vw;
-    height: 100vh;
+    height: 103vh;
     max-width: 100%;
     position: relative;
     display: flex;
@@ -413,16 +414,38 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
     align-items: center;
     overflow: hidden;
     .header__img-container{
-        position: absolute;
+        background: url(../img/image__one.jpg) no-repeat 50% -190px / cover;
+        height: 100%;
+        width: 100%;
         top: 0;
-        bottom: 0;
-        right: 0;
         left: 0;
-        background-image: url(../img/image__one.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+        position: absolute;
     }
+}
+@media only screen and (max-width: 1900px){
+    .header__img{
+        width: 100vw;
+        height: 100vh;
+        max-width: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        .header__img-container{
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            background-image: url(../img/image__one.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    }
+    
+    
 }
 
 
