--- a/style/main.less
+++ b/style/main.less
@@ -738,18 +738,19 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 }
 
 .loading-lazy__section{
-    
+    margin-bottom: 25px;
     .loading-lazy__container{
-        width: 1800px;
+        width: 100%;
         margin: 0 auto;
         .loading-lazy__box{
             background: #112D4E;
             padding-top: 35px;
             position: relative;
             h1{
+                color: white;
                 position: absolute;
                 top: 0;
-                left: 0;
+                left: 25px;
             }
             .loading-lazy__ul{
                 height: 367px;
