--- a/style/main.less
+++ b/style/main.less
@@ -744,23 +744,57 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         margin: 0 auto;
         .loading-lazy__box{
             background: #112D4E;
-            padding-top: 35px;
             position: relative;
             h1{
                 color: white;
                 position: absolute;
-                top: 0;
+                top: 25px;
                 left: 25px;
             }
             .loading-lazy__ul{
-                height: 367px;
-                width: 100%;
-                
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                grid-gap: 0.2rem;    
+                grid-template-areas: 
+                    "one two three four"
+                    "five six seven eight";
+
+
+                .one{
+                    grid-area: one;
+                   
+                }
+                .two{
+                    grid-area: two;
+                   
+                }
+                .three{
+                    grid-area: three;
+                    
+                }
+                .four{
+                    grid-area: four;
+                    
+                }
+                .five{
+                    grid-area: five;
+                  
+                }
+                .six{
+                    grid-area: six;
+                    
+                }
+                .seven{
+                    grid-area: seven;
+                    
+                }
+                .eight{
+                    grid-area: eight;
+                   
+                }
                 .loading-lazy__li{
+                    
                     background: url("../img/logo.gif") center / 50px no-repeat;
                     margin-right: 30px;
                     box-shadow: 0 0 8px rgb(0 0 0);
@@ -771,17 +805,19 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                     transform: translateX(100px);    
                     transition: 1800ms ;
                     img{
-                  
+                        
                         width: 100%;
                         height: 100%;
-                        
                     }
                     &:last-child{
                         margin: 0;
                     }
+
+                
                     
 
-                   
+                    
+
                 }
             }
         }
