--- a/style/main.css
+++ b/style/main.css
@@ -499,6 +499,19 @@ body .inverted .header__container {
   object-fit: cover;
   opacity: 0.5;
 }
+@media only screen and (max-width: 1900px) {
+  .swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation .swiper-slider__navigation-next::before {
+    right: 15px;
+    font-size: 30px;
+  }
+  .swiper-slider .swiper-slider__wrapper .swiper-slider__container .swiper-slider__navigation .swiper-slider__navigation-prev::before {
+    left: 15px;
+    font-size: 30px;
+  }
+  .swiper-slider .swiper-slider__header {
+    font-size: 25px;
+  }
+}
 @keyframes key-light {
   0% {
     opacity: 0.2;
@@ -612,6 +625,21 @@ body .inverted .header__container {
 }
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li:last-child {
   margin: 0;
+}
+@media only screen and (max-width: 1900px) {
+  .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul {
+    padding-top: 60px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    row-gap: 5px;
+    column-gap: 5px;
+    grid-template-areas: "one " "two " "three " "four " "five " "six";
+  }
+  .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li {
+    height: 350px;
+    width: 100%;
+  }
 }
 .elements__section-grid {
   height: 1000px;
