--- a/style/main.less
+++ b/style/main.less
@@ -848,7 +848,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         padding-top: 60px;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
         row-gap: 5px;
         column-gap: 5px;
         grid-template-areas:
@@ -862,6 +862,24 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li{
             height: 350px;
             width: 100%;
+        }
+        .loading-lazy__section .loading-lazy__container .loading-lazy__box{
+            padding: 77px 5px 5px 5px;
+        }
+        .loading-lazy__section .loading-lazy__container .loading-lazy__box h2{
+            font-size: 22px;
+            left: 0;
+            margin: 10px;
+        }
+        .loading-lazy__section .loading-lazy__container .loading-lazy__box h1{
+            top: 50px;
+            left: 10px;
+        }
+        .swiper-slider{
+            margin: 5px 0px 5px 0px;
+        }
+        .loading-lazy__section {
+            margin-bottom: 5px;
         }
 }
 //////////////////////////////////////Lazy Loading Images with JavaScript Intersection Observer///////////////////////////////////////////////////////
