--- a/style/main.less
+++ b/style/main.less
@@ -768,7 +768,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
             }
             
-            padding: 85px 20px;
+            padding: 85px 20px 20px 20px;
             background: #112D4E;
             position: relative;
             
